NULL =

png_icons = \
	appointment-missed.png \
	appointment-soon.png \
	audio-volume-high.png \
	audio-volume-low.png \
	audio-volume-medium.png \
	audio-volume-muted.png \
	audio-volume-off.png \
	avatar-default.png \
	battery-caution-charging.png \
	battery-caution.png \
	battery-empty.png \
	battery-full-charged.png \
	battery-full-charging.png \
	battery-full.png \
	battery-good-charging.png \
	battery-good.png \
	battery-low-charging.png \
	battery-low.png \
	battery-missing.png \
	computer-fail.png \
	dialog-error.png \
	dialog-information.png \
	dialog-password.png \
	dialog-question.png \
	dialog-warning.png \
	image-loading.png \
	image-missing.png \
	mail-read.png \
	network-error.png \
	network-idle.png \
	network-offline.png \
	network-receive.png \
	network-transmit.png \
	network-transmit-receive.png \
	non-starred.png \
	printer-error.png \
	printer-printing.png \
	security-high.png \
	security-low.png \
	security-medium.png \
	semi-starred.png \
	semi-starred-rtl.png \
	software-update-available.png \
	software-update-urgent.png \
	starred.png \
	trophy-bronze.png \
	trophy-gold.png \
	trophy-silver.png \
	user-trash-full.png \
	$(NULL)

appointment-missed.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-soon.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=415:313:671:569 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-high.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:311:278:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-low.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-medium.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:311:678:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-muted.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:11:678:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-off.png: ../../../src/audio-volume-off.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:11:278:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

avatar-default.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:22:278:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=49:311:305:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:611:1078:867 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-empty.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:-309:678:-53 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charged.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:-623:678:-367 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:7:678:263 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:311:678:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:11:1078:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:311:1078:567 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=822:-309:1078:-53 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=422:611:678:867 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-missing.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:-309:278:-53 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer-fail.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1616:22:1872:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-error.png: ../../../src/dialog-error.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-information.png: ../../../src/dialog-information.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-password.png: ../../../src/dialog-password.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-question.png: ../../../src/dialog-question.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-warning.png: ../../../src/dialog-warning.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-drag-accept.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=820:928:1076:1184 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:928:676:1184 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-visiting.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1220:928:1476:1184 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-loading.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=415:13:671:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-missing.png: ../../../src/photos.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=415:13:671:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-read.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:13:676:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-error.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=816:322:1072:578 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-idle.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=16:22:272:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-offline.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1216:322:1472:578 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1216:22:1472:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=816:22:1072:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=416:22:672:278 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-error.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:3:676:259 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-printing.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:303:676:559 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-high.png: ../../../src/security-high.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-low.png: ../../../src/security-low.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-medium.png: ../../../src/security-medium.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=15:13:271:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-available.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=19:13:275:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-urgent.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=419:13:675:269 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

non-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:15:276:271 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:315:676:571 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred-rtl.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=420:15:676:271 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=20:315:276:571 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-bronze.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=811:11:1067:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-gold.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=11:11:267:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-silver.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=411:11:667:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-trash-full.png: ../../../src/trash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=26:11:282:267 -w=256 -h=256 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
